--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "webpack --mode=development",
     "build": "webpack --mode=production",
-    "serve": "webpack serve --mode=development",
-    "serve-o": "webpack serve --mode=development --open"
+    "start:dev": "webpack serve --mode=development --open"
   },
   "author": "Dmitriq Maslow <1dmitriqm@gmail.com>",
   "license": "ISC",
